better layout, fixed some bugs, overflow handling, moved sidebar into component, added formatted dates

--- a/daggerbase_dashboard/app/globals.css
+++ b/daggerbase_dashboard/app/globals.css
@@ -25,3 +25,8 @@ body {
   color: var(--foreground);
   font-family: var(--font-rubik);
 }
+
+.custom-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: #7c3aed #000000;
+}
